# Server-Client_Project

./: .gitignore  readme.md
client/: CMakeLists.txt  client.cpp  client.rc
client/include/: clientHandles.h
client/src/: CMakeLists.txt  clientHandles.cpp  main.cpp  network.cpp
server/: CMakeLists.txt  server.cpp
server/data/: server.db
server/include/: clientSession.h  database.h  serverHandles.h  serverNetwork.h
server/src/: database.cpp  server.rc  serverHandles.cpp  serverMain.cpp  serverNetwork.cpp
